--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -1,6 +1,7 @@
 {% load static %}
 
-{# Шаблон для генерації стрічки записів на головній сторінці сайту #}
+{# Template for generating a tape of records on the main page of the site. #}
+{# Imagine that this code was not written by me. I don't really like him. #}
 
 {% for i in 12|get_range_list %}
     {% for el in posts %}
