--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -3,65 +3,73 @@
 {# Template for generating a tape of records on the main page of the site. #}
 {# Imagine that this code was not written by me. I don't really like him. #}
 
-{% for i in 12|get_range_list %}
-    {% for el in posts %}
-        {% if 100|get_randint > 90 %}
-            <div class="col-12 col-lg-12 padding-block-center-box" id="1:{{ 16|get_random_string }}">
+{% for el in data %}
+    {% if 100|get_randint > 50 %}
+        <div class="col-12 col-lg-12 padding-block-center-box" id="{{ 16|get_random_string }}">
+            <div class="user box aos-init aos-animate" data-aos="fade-up">
+                <img style="image-rendering: pixelated; width: 60px; filter: invert(80%); height: 60px" class="lazyloaded" data-src="{% static 'my_web/images/logo-dark.svg' %}" src="{% static 'my_web/images/logo-dark.svg' %}">
+                <div style="width: calc(100% - 90px); float: left; ">
+                    <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
+                    <label class="username" id="{{ 12|get_random_string }}">Пользовательская запись</label><br>
+                    <label class="city">{{ el.0.0|safe }}<br/><b>❤️ {{ el.0.2 }}</b><br/></b><i><u>Опубликовано {{ el.0.1 }} (UTC)</u></i></label><br>
+                    <a style="font-size: 12px;" href="{% url 'postaddr' %}{{ el.0.3 }}" id="{{ 8|get_random_string }}"><b>История Порфирьевича</b></a><br>
+                </div>
+            </div>
+        </div>
+    {% endif %}
+    {% if 100|get_randint > 90 %}
+        <div class="col-12 col-lg-12 padding-block-center-box" id="{{ 16|get_random_string }}">
+            <div class="user box aos-init aos-animate" data-aos="fade-up">
+                <img style="image-rendering: pixelated; width: 60px; filter: invert(80%); height: 60px" class="lazyloaded" data-src="{% static 'my_web/images/logo-dark.svg' %}" src="{% static 'my_web/images/logo-dark.svg' %}">
+                <div style="width: calc(100% - 90px); float: left; ">
+                    <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
+                    <label class="username" id="{{ 12|get_random_string }}">Пользовательская запись</label><br>
+                    <label class="city"><i title="Текст который написал пользователь">{{ el.1.user_text }}</i><b title="Текст который написал бот">{{ el.1.bot_text }}</b><br><br/><i><u>Опубликовано {{ el.1.time_field }} (UTC)</u></i></label><br>
+                    <a style="font-size: 12px;" href="{% url 'postaddr' %}{{ el.1.id }}" id="{{ 8|get_random_string }}"><b>q-writer.com</b></a><br>
+                </div>
+            </div>
+        </div>
+    {% endif %}
+    {% if 100|get_randint > 70 %}
+        <div class="col-12 col-lg-12 padding-block-center-box" id="{{ 16|get_random_string }}">
+            <div class="user box aos-init aos-animate" data-aos="fade-up">
+                <img style="image-rendering: pixelated; width: 60px; filter: invert(80%); height: 60px" class="lazyloaded" data-src="{% static 'my_web/images/logo-dark.svg' %}" src="{% static 'my_web/images/logo-dark.svg' %}">
+                <div style="width: calc(100% - 90px); float: left; ">
+                    <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
+                    <label class="username" id="{{ 12|get_random_string }}">Случайная цитата</label><br>
+                    <label class="city"><i>„{{ el.2.q_text }}“</i><br><br><b>{{ el.2.q_author }}</b></label><br>
+                    <a style="font-size: 12px;" href="{% url 'quoteaddr' %}{{ el.2.id }}" id="{{ 8|get_random_string }}"><b>q-writer.com</b></a><br>
+                </div>
+            </div>
+        </div>
+    {% endif %}
+    {% if 100|get_randint > 70 %}
+        <div class="col-12 col-lg-12 padding-block-center-box" id="{{ 16|get_random_string }}">
+            <div class="user box aos-init aos-animate" data-aos="fade-up">
+                <img style="image-rendering: pixelated; width: 60px; filter: invert(80%); height: 60px" class="lazyloaded" data-src="{% static 'my_web/images/logo-dark.svg' %}" src="{% static 'my_web/images/logo-dark.svg' %}">
+                <div style="width: calc(100% - 90px); float: left; ">
+                    <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
+                    <label class="username" id="{{ 12|get_random_string }}">Случайный факт</label><br>
+                    <label class="city"><i>{{ el.3.f_text }}</i><br></label><br><br>
+                    <a style="font-size: 12px;" href="{% url 'factaddr' %}{{ el.3.id }}" id="{{ 8|get_random_string }}"><b>q-writer.com</b></a><br>
+                </div>
+            </div>
+        </div>
+    {% endif %}
+    {% if 100|get_randint > 96 %}
+        {% if el.4.0 %}
+            <div class="col-12 col-lg-12 padding-block-center-box" id="{{ 16|get_random_string }}">
                 <div class="user box aos-init aos-animate" data-aos="fade-up">
                     <img style="image-rendering: pixelated; width: 60px; filter: invert(80%); height: 60px" class="lazyloaded" data-src="{% static 'my_web/images/logo-dark.svg' %}" src="{% static 'my_web/images/logo-dark.svg' %}">
                     <div style="width: calc(100% - 90px); float: left; ">
                         <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
-                        <label class="username" id="1:{{ 12|get_random_string }}">Пользовательская запись</label><br>
-                        <label class="city"><i title="Текст который написал пользователь">{{ el.user_text }}</i><b title="Текст который написал бот">{{ el.bot_text }}</b><br><br/><i><u>Опубликовано {{ el.time_field }} (UTC)</u></i></label><br>
-                        <a style="font-size: 12px;" href="{% url 'postaddr' %}{{ el.id }}" id="1:{{ 8|get_random_string }}"><b>q-writer.com</b></a><br>
+                        <label class="username" id="{{ 12|get_random_string }}">Случайная новость</label><br>
+                        <label class="city"><b style="font-size: 14px">{{ el.4.0 }}</b><br/><i>{{ el.4.1 }}</i><br><br><b>Источник - <a href="{{ el.4.4 }}">{{ el.4.2 }}</a></b><br><i><u>Опубликовано {{ el.4.3 }} (UTC)</u></i></label><br><br>
+                        <a style="font-size: 12px;" href="{% url 'index_page' %}" id="{{ 8|get_random_string }}"><b>q-writer.com</b></a><br>
                     </div>
                 </div>
             </div>
         {% endif %}
-    {% endfor %}
-    {% for el in quotes %}
-        {% if 100|get_randint > 96 %}
-            <div class="col-12 col-lg-12 padding-block-center-box" id="2:{{ 16|get_random_string }}">
-                <div class="user box aos-init aos-animate" data-aos="fade-up">
-                    <img style="image-rendering: pixelated; width: 60px; filter: invert(80%); height: 60px" class="lazyloaded" data-src="{% static 'my_web/images/logo-dark.svg' %}" src="{% static 'my_web/images/logo-dark.svg' %}">
-                    <div style="width: calc(100% - 90px); float: left; ">
-                        <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
-                        <label class="username" id="2:{{ 12|get_random_string }}">Случайная цитата</label><br>
-                        <label class="city"><i>„{{ el.q_text }}“</i><br><br><b>{{ el.q_author }}</b></label><br>
-                        <a style="font-size: 12px;" href="{% url 'quoteaddr' %}{{ el.id }}" id="2:{{ 8|get_random_string }}"><b>q-writer.com</b></a><br>
-                    </div>
-                </div>
-            </div>
-        {% endif %}
-    {% endfor %}
-    {% for el in facts %}
-        {% if 100|get_randint > 96 %}
-            <div class="col-12 col-lg-12 padding-block-center-box" id="3:{{ 16|get_random_string }}">
-                <div class="user box aos-init aos-animate" data-aos="fade-up">
-                    <img style="image-rendering: pixelated; width: 60px; filter: invert(80%); height: 60px" class="lazyloaded" data-src="{% static 'my_web/images/logo-dark.svg' %}" src="{% static 'my_web/images/logo-dark.svg' %}">
-                    <div style="width: calc(100% - 90px); float: left; ">
-                        <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
-                        <label class="username" id="3:{{ 12|get_random_string }}">Случайный факт</label><br>
-                        <label class="city"><i>{{ el.f_text }}</i><br></label><br><br>
-                        <a style="font-size: 12px;" href="{% url 'factaddr' %}{{ el.id }}" id="3:{{ 8|get_random_string }}"><b>q-writer.com</b></a><br>
-                    </div>
-                </div>
-            </div>
-        {% endif %}
-    {% endfor %}
-    {% for el in news %}
-        {% if 1000|get_randint > 995 %}
-            <div class="col-12 col-lg-12 padding-block-center-box" id="4:{{ 16|get_random_string }}">
-                <div class="user box aos-init aos-animate" data-aos="fade-up">
-                    <img style="image-rendering: pixelated; width: 60px; filter: invert(80%); height: 60px" class="lazyloaded" data-src="{% static 'my_web/images/logo-dark.svg' %}" src="{% static 'my_web/images/logo-dark.svg' %}">
-                    <div style="width: calc(100% - 90px); float: left; ">
-                        <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
-                        <label class="username" id="4:{{ 12|get_random_string }}">Случайная новость</label><br>
-                        <label class="city"><b style="font-size: 14px">{{ el.0 }}</b><br/><i>{{ el.1 }}</i><br><br><b>Источник - <a href="{{ el.4 }}">{{ el.2 }}</a></b><br><i><u>Опубликовано {{ el.3 }} (UTC)</u></i></label><br><br>
-                        <a style="font-size: 12px;" href="{% url 'index_page' %}" id="4:{{ 8|get_random_string }}"><b>q-writer.com</b></a><br>
-                    </div>
-                </div>
-            </div>
-        {% endif %}
-    {% endfor %}
+    {% endif %}
 {% endfor %}
+
