--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -7,8 +7,7 @@
     {% if 100|get_randint > 50 %}
         <div class="col-12 col-lg-12 padding-block-center-box" id="{{ 16|get_random_string }}">
             <div class="user box aos-init aos-animate" data-aos="fade-up">
-                <img style="image-rendering: pixelated; width: 60px; filter: invert(80%); height: 60px" class="lazyloaded" data-src="{% static 'my_web/images/logo-dark.svg' %}" src="{% static 'my_web/images/logo-dark.svg' %}">
-                <div style="width: calc(100% - 90px); float: left; ">
+                <div style="float: left;">
                     <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
                     <label class="username" id="{{ 12|get_random_string }}">Пользовательская запись</label><br>
                     <label class="city">{{ el.0.0|safe }}<br/><b>❤️ {{ el.0.2 }}</b><br/></b><i><u>Опубликовано {{ el.0.1 }} (UTC)</u></i></label><br>
@@ -20,8 +19,7 @@
     {% if 100|get_randint > 90 %}
         <div class="col-12 col-lg-12 padding-block-center-box" id="{{ 16|get_random_string }}">
             <div class="user box aos-init aos-animate" data-aos="fade-up">
-                <img style="image-rendering: pixelated; width: 60px; filter: invert(80%); height: 60px" class="lazyloaded" data-src="{% static 'my_web/images/logo-dark.svg' %}" src="{% static 'my_web/images/logo-dark.svg' %}">
-                <div style="width: calc(100% - 90px); float: left; ">
+                <div style="float: left;">
                     <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
                     <label class="username" id="{{ 12|get_random_string }}">Пользовательская запись</label><br>
                     <label class="city"><i title="Текст который написал пользователь">{{ el.1.user_text }}</i><b title="Текст который написал бот">{{ el.1.bot_text }}</b><br><br/><i><u>Опубликовано {{ el.1.time_field }} (UTC)</u></i></label><br>
@@ -33,8 +31,7 @@
     {% if 100|get_randint > 70 %}
         <div class="col-12 col-lg-12 padding-block-center-box" id="{{ 16|get_random_string }}">
             <div class="user box aos-init aos-animate" data-aos="fade-up">
-                <img style="image-rendering: pixelated; width: 60px; filter: invert(80%); height: 60px" class="lazyloaded" data-src="{% static 'my_web/images/logo-dark.svg' %}" src="{% static 'my_web/images/logo-dark.svg' %}">
-                <div style="width: calc(100% - 90px); float: left; ">
+                <div style="float: left;">
                     <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
                     <label class="username" id="{{ 12|get_random_string }}">Случайная цитата</label><br>
                     <label class="city"><i>„{{ el.2.q_text }}“</i><br><br><b>{{ el.2.q_author }}</b></label><br>
@@ -46,8 +43,7 @@
     {% if 100|get_randint > 70 %}
         <div class="col-12 col-lg-12 padding-block-center-box" id="{{ 16|get_random_string }}">
             <div class="user box aos-init aos-animate" data-aos="fade-up">
-                <img style="image-rendering: pixelated; width: 60px; filter: invert(80%); height: 60px" class="lazyloaded" data-src="{% static 'my_web/images/logo-dark.svg' %}" src="{% static 'my_web/images/logo-dark.svg' %}">
-                <div style="width: calc(100% - 90px); float: left; ">
+                <div style="float: left;">
                     <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
                     <label class="username" id="{{ 12|get_random_string }}">Случайный факт</label><br>
                     <label class="city"><i>{{ el.3.f_text }}</i><br></label><br><br>
@@ -60,13 +56,12 @@
         {% if el.4.0 %}
             <div class="col-12 col-lg-12 padding-block-center-box" id="{{ 16|get_random_string }}">
                 <div class="user box aos-init aos-animate" data-aos="fade-up">
-                    <img style="image-rendering: pixelated; width: 60px; filter: invert(80%); height: 60px" class="lazyloaded" data-src="{% static 'my_web/images/logo-dark.svg' %}" src="{% static 'my_web/images/logo-dark.svg' %}">
-                    <div style="width: calc(100% - 90px); float: left; ">
+                    <div style="float: left;">
                         <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
                         <label class="username" id="{{ 12|get_random_string }}">Случайная новость</label><br>
                         <label class="city">
                             {% if el.4.5 %}
-                                <img id="{{ 16|get_random_string }}" src="{{ el.4.5 }}" class="rounded mx-auto d-block" style="width:100%;margin: 2%;" alt="Обложка новостного блока">
+                                <img id="{{ 16|get_random_string }}" src="{{ el.4.5 }}" class="photohub_item" style="width:100%;margin-top: 3%;" alt="Обложка новостного блока">
                             {% endif %}
                             <b id="{{ 12|get_random_string }}" style="font-size: 14px">{{ el.4.0 }}</b><br/><i id="{{ 12|get_random_string }}">{{ el.4.1 }}</i><br><br><b id="{{ 12|get_random_string }}">Источник - <a id="{{ 12|get_random_string }}" href="{{ el.4.4 }}">{{ el.4.2 }}</a></b><br><i><u id="{{ 12|get_random_string }}">Опубликовано {{ el.4.3 }} (UTC)</u></i>
                         </label><br><br>
