--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -61,7 +61,7 @@
                         <label class="username" id="{{ 0|get_id }}">Случайная новость</label><br>
                         <label class="city">
                             {% if el.4.5 %}
-                                <img id="{{ 0|get_id }}" src="{{ el.4.5 }}" class="photohub_item" style="width:100%;margin-top: 3%;" alt="Обложка новостного блока">
+                                <img id="{{ 0|get_id }}" src="{% url 'imageproxy' %}?data={{ el.4.5|link_encrypt_img }}&token={{ token_image_proxy }}" class="photohub_item" style="width:100%;margin-top: 3%;" alt="Обложка новостного блока">
                             {% endif %}
                             <b id="{{ 0|get_id }}" style="font-size: 14px">{{ el.4.0 }}</b><br/><i id="{{ 0|get_id }}">{{ el.4.1 }}</i><br><br><b id="{{ 0|get_id }}">Источник - <a id="{{ 0|get_id }}" href="{{ el.4.4 }}">{{ el.4.2 }}</a></b><br><i><u id="{{ 0|get_id }}">Опубликовано {{ el.4.3 }} (UTC)</u></i>
                         </label><br><br>
