--- a/my_web/templates/my_web/botpage.html
+++ b/my_web/templates/my_web/botpage.html
@@ -24,8 +24,7 @@ QWriter
 {% load static %}
         <div class="col-12 col-lg-12 padding-block-center-box">
             <div class="user box aos-init aos-animate" data-aos="fade-up">
-                <img style="image-rendering: pixelated; width: 60px; filter: invert(80%); height: 60px" class="lazyloaded" data-src="{% static 'my_web/images/logo-dark.svg' %}" src="{% static 'my_web/images/logo-dark.svg' %}">
-                <div style="width: calc(100% - 90px); float: left; ">
+                <div style="float: left; ">
                     <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
                     <label class="username">Бот QWriter в Telegram</label><br>
                     <label class="city"><i>Сам этот сайт - всего лишь способ просмотреть ранее созданые записи. Эти записи создаются пользователями </i><a style="font-size: 12px;" href="https://t.me/qwriter_bot"><b>QWriter</b></a><i>, Telegram бота, который является основой этого проекта. Сайт появился позже. Чтобы перейти к боту </i><a style="font-size: 12px;" href="https://t.me/qwriter_bot"><b>QWriter</b></a><i>, щелкните по его имени. </i></label><br>
@@ -35,8 +34,7 @@ QWriter
         </div>
         <div class="col-12 col-lg-12 padding-block-center-box">
             <div class="user box aos-init aos-animate" data-aos="fade-up">
-                <img style="image-rendering: pixelated; width: 60px; filter: invert(80%); height: 60px" class="lazyloaded" data-src="{% static 'my_web/images/logo-dark.svg' %}" src="{% static 'my_web/images/logo-dark.svg' %}">
-                <div style="width: calc(100% - 90px); float: left; ">
+                <div style="float: left; ">
                     <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
                     <label class="username">Подсказка </label><br>
                     <label class="city"><b>Сейчас Вы видите контент, который соответствует адресу по которому Вы перешли.</b></label><br>
