--- a/my_web/templates/my_web/status.html
+++ b/my_web/templates/my_web/status.html
@@ -24,8 +24,7 @@ QWriter
 {% load static %}
         <div class="col-12 col-lg-12 padding-block-center-box">
             <div class="user box aos-init aos-animate" data-aos="fade-up">
-                <img style="image-rendering: pixelated; width: 60px; filter: invert(80%); height: 60px" class="lazyloaded" data-src="{% static 'my_web/images/logo-dark.svg' %}" src="{% static 'my_web/images/logo-dark.svg' %}">
-                <div style="width: calc(100% - 90px); float: left; ">
+                <div style="float: left; ">
                     <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
                     <label class="username">История работы QWriter</label><br>
                     <label class="city"><i>Если Вы хотите посмотреть историю происшествий QWriter и процент его доступности. </i><a style="font-size: 12px;" href="https://stats.uptimerobot.com/j8wEGcjZ7N/785845940"><b>Перейдите на эту страницу.</b></a></label><br>
@@ -35,8 +34,7 @@ QWriter
         </div>
         <div class="col-12 col-lg-12 padding-block-center-box">
             <div class="user box aos-init aos-animate" data-aos="fade-up">
-                <img style="image-rendering: pixelated; width: 60px; filter: invert(80%); height: 60px" class="lazyloaded" data-src="{% static 'my_web/images/logo-dark.svg' %}" src="{% static 'my_web/images/logo-dark.svg' %}">
-                <div style="width: calc(100% - 90px); float: left; ">
+                <div style="float: left; ">
                     <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
                     <label class="username">Подсказка </label><br>
                     <label class="city"><b>Сейчас Вы видите контент, который соответствует адресу по которому Вы перешли.</b></label><br>
