--- a/my_web/templates/my_web/base.html
+++ b/my_web/templates/my_web/base.html
@@ -19,6 +19,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
         <script src="{% static 'my_web/js/lazysizes.min.js' %}"></script>
         <script src="{% static 'my_web/js/jquery.min.js' %}"></script>
+        <script src="{% static 'my_web/js/jquery.cookie.min.js' %}"></script>
         <script src="{% static 'my_web/js/popper.min.js' %}"></script>
         <script src="{% static 'my_web/js/bootstrap.min.js' %}"></script>
 	<script src="{% static 'my_web/js/aos.js' %}"></script>
