--- a/my_web/templates/my_web/storyview.html
+++ b/my_web/templates/my_web/storyview.html
@@ -23,22 +23,22 @@ QWriter
 {% block content %}
 {% load static %}
     <div class="col-12 col-lg-12 padding-block-center-box">
-        <div class="user box aos-init aos-animate" data-aos="fade-up" id="{{ 0|get_id }}">
+        <div class="user box aos-init aos-animate" data-aos="fade-up">
             <div style="float: left;">
-                <label id="{{ 0|get_id }}" class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
-                <label id="{{ 0|get_id }}" class="username">Пользовательская запись</label><br>
-                <label id="{{ 0|get_id }}" class="city">{{ text|safe }}<br/><b id="{{ 0|get_id }}">❤️ {{ likes }}</b><br/></b id="{{ 0|get_id }}"><i><u id="{{ 0|get_id }}">Опубликовано {{ time }} (UTC)</u></i></label><br>
-                <a id="{{ 0|get_id }}" style="font-size: 12px;" href="{% url 'index_page' %}"><b>q-writer.com</b></a><br>
+                <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
+                <label class="username">Пользовательская запись</label><br>
+                <label class="city">{{ text|safe }}<br/><b>❤️ {{ likes }}</b><br/></b><i><u>Опубликовано {{ time }} (UTC)</u></i></label><br>
+                <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>q-writer.com</b></a><br>
             </div>
         </div>
     </div>
     <div class="col-12 col-lg-12 padding-block-center-box">
-        <div class="user box aos-init aos-animate" data-aos="fade-up" id="{{ 0|get_id }}">
+        <div class="user box aos-init aos-animate" data-aos="fade-up">
             <div style="float: left;">
-                <label id="{{ 0|get_id }}" class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
-                <label id="{{ 0|get_id }}" class="username">Подсказка </label><br>
-                <label id="{{ 0|get_id }}" class="city"><b>Сейчас Вы видите контент, который соответствует адресу по которому Вы перешли.</b></label><br>
-                <a id="{{ 0|get_id }}" style="font-size: 12px;" href="{% url 'index_page' %}"><b>q-writer.com</b></a><br>
+                <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
+                <label class="username">Подсказка </label><br>
+                <label class="city"><b>Сейчас Вы видите контент, который соответствует адресу по которому Вы перешли.</b></label><br>
+                <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>q-writer.com</b></a><br>
             </div>
         </div>
     </div>
