--- a/my_web/templates/my_web/error.html
+++ b/my_web/templates/my_web/error.html
@@ -18,7 +18,7 @@ QWriter
 
 {% block content %}
 {% load static %}
-    <div class="col-12 col-lg-12 padding-block-center-box">
+        <div class="col-12 col-lg-12 padding-block-center-box">
             <div class="user box aos-init aos-animate" data-aos="fade-up">
                 <div style="float: left; ">
                     <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
@@ -28,6 +28,7 @@ QWriter
                 </div>
             </div>
         </div>
+    {% include 'my_web/page_notify.html' %}
 {% endblock %}
 
 {% block js_module %}
